--- a/resources/popup.html
+++ b/resources/popup.html
@@ -1,1 +1,21 @@
-Hello! World!
+<html>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta charset="utf-8">
+    <link href="popup.css" rel="stylesheet">
+  </head>
+  <body>
+    <div>
+      <div>除外表示登録された文字列のリストです</div>
+      <table id="message_txt">
+        <tr><th></th><th></th></tr>
+      </table>
+    </div>
+    <script id="tmpl" type="x-tmpl-mustache">
+      <tr><td class="value">{{value}}</td><td class="action"><button data-val="{{value}}">削除</button></td></tr>
+    </script>
+    <script src="../jquery-2.2.1.min.js"></script>
+    <script src="../mustache-2.2.1.min.js"></script>
+    <script src="../popup.js"></script>
+  </body>
+</html>
