--- a/resources/popup.html
+++ b/resources/popup.html
@@ -12,7 +12,7 @@
       </table>
     </div>
     <script id="tmpl" type="x-tmpl-mustache">
-      <tr><td class="value">{{value}}</td><td class="action"><button data-val="{{value}}">削除</button></td></tr>
+      <tr class="exclude"><td class="value">{{value}}</td><td class="action"><button data-val="{{value}}">削除</button></td></tr>
     </script>
     <script src="../popup.js"></script>
   </body>
