--- a/src/popup.html
+++ b/src/popup.html
@@ -15,9 +15,11 @@
   </head>
   <body>
     <div>
-      <div>除外表示登録された文字列のリストです</div>
-      <table id="message_txt">
-        <tr><th></th><th></th></tr>
+      <table class="table table-striped table-hover table-condensed">
+        <thead><tr><th>除外表示</th><th></th></tr></thead>
+        <tfoot><tr><td></td><td></td></tr></tfoot>
+        <tbody id="message_txt">
+        </tbody>
       </table>
     </div>
 
@@ -29,7 +31,7 @@
     <!-- endbuild -->
 
     <script id="tmpl" type="x-tmpl-mustache">
-      <tr class="exclude"><td class="value">{{value}}</td><td class="action"><button data-val="{{value}}">削除</button></td></tr>
+      <tr class="exclude"><td class="value">{{value}}</td><td class="action"><button class="btn btn-danger btn-sm" data-val="{{value}}">削除</button></td></tr>
     </script>
     <!-- build:js scripts/popup.js -->
     <script src="popup.js"></script>
