add options page

--- a/src/popup.html
+++ b/src/popup.html
@@ -31,7 +31,7 @@
     <!-- endbuild -->
 
     <script id="tmpl" type="x-tmpl-mustache">
-      <tr class="exclude"><td class="value">{{value}}</td><td class="action"><button class="btn btn-danger btn-sm" data-val="{{value}}">削除</button></td></tr>
+      <tr class="exclude"><td class="value">{{value}}</td><td class="action pull-right"><button class="btn btn-danger btn-sm" data-val="{{value}}">削除</button></td></tr>
     </script>
     <!-- build:js scripts/popup.js -->
     <script src="popup.js"></script>
